Closed
Bug 591433
Opened 14 years ago
Closed 14 years ago
"ASSERTION: SHEntry already contains viewer"
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
blocking2.0 | --- | - |
People
(Reporter: jruderman, Assigned: smaug)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
772 bytes,
text/html
|
Details | |
3.65 KB,
text/plain
|
Details | |
1.08 KB,
patch
|
bzbarsky
:
review+
jst
:
approval2.0+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: SHEntry already contains viewer: '!aViewer || !mContentViewer', file docshell/shistory/src/nsSHEntry.cpp, line 240
###!!! ASSERTION: Uh, mDocument doesn't match the current inner window document!: '!GetCurrentInnerWindow() || GetCurrentInnerWindow()->GetExtantDocument() == mDocument', file dom/base/nsGlobalWindow.cpp, line 1629
Reporter | ||
Comment 1•14 years ago
|
||
Reporter | ||
Comment 3•14 years ago
|
||
Other testcases (similar in appearance and all difficult to reduce) trigger other SHEntry-related assertions, and some of them sound pretty scary.
Assignee | ||
Comment 4•14 years ago
|
||
I'll look at this.
But other assertions need new bugs.
Assignee: nobody → Olli.Pettay
Assignee | ||
Comment 5•14 years ago
|
||
(In reply to comment #2)
> Regression from smaug's changes?
No. This happens on 1.9.2 too.
Assignee | ||
Comment 6•14 years ago
|
||
We shouldn't try to load anything to a docshell which isn't anymore in the
docshell tree.
The problem here is that the document (or its container) which keeps the iframe
alive is already disconnected from the parent docshell.
But we don't tear down all the child docshells in other way than setting
the treeOwner to null.
The testcase should work as crashtest, which asserts without the patch.
I pushed this to tryserver.
Attachment #473489 -
Flags: review?(bzbarsky)
Reporter | ||
Comment 7•14 years ago
|
||
> The testcase should work as crashtest, which asserts without the patch.
On the other hand, the testcase is kind of insane. What it actually tests is timing-dependent. Is it possible to make a simpler one, now that you know what's going on?
OS: Mac OS X → Windows 7
Assignee | ||
Comment 8•14 years ago
|
||
I don't see anything "insane" in the testcase.
Reporter | ||
Comment 9•14 years ago
|
||
Well, it's complex and full of timeouts.
Comment 10•14 years ago
|
||
Comment on attachment 473489 [details] [diff] [review]
patch
r=me
Attachment #473489 -
Flags: review?(bzbarsky) → review+
Assignee | ||
Updated•14 years ago
|
Attachment #473489 -
Flags: approval2.0?
Updated•14 years ago
|
Attachment #473489 -
Flags: approval2.0? → approval2.0+
Assignee | ||
Comment 12•14 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/85c59446991a
I'll push still the testcase.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•