Bug 591433 - ASSERTION: SHEntry already contains viewer, r=bz, a=jst